syntax = "proto3";

package go.micro.auth;

service Auth {
    rpc Generate(GenerateRequest) returns (GenerateResponse) {};
    rpc Validate(ValidateRequest) returns (ValidateResponse) {};
    rpc Revoke(RevokeRequest)  returns (RevokeResponse) {};
    rpc AddRole(AddRoleRequest)  returns (AddRoleResponse) {};
    rpc RemoveRole(RemoveRoleRequest)  returns (RemoveRoleResponse) {};
}

message ServiceAccount{
    Resource parent = 1;
    string id = 2;
    string token = 3;
    int64 created = 4;
    int64 expiry = 5;
    repeated Role roles = 6;
	map<string, string> metadata = 7;
}

message Role {
    string name = 1;
    Resource resource = 2;
}

message Resource{
    string id = 1;
    string type = 2;
}

message GenerateRequest {
    ServiceAccount service_account = 1;
}

message ValidateRequest {
    string token = 1;
}

message RevokeRequest {
    ServiceAccount service_account = 1;
}

message AddRoleRequest {
    ServiceAccount service_account = 1;
    Role role = 2;
}

message RemoveRoleRequest {
    ServiceAccount service_account = 1;
    Role role = 2;
}

message GenerateResponse {
    ServiceAccount service_account = 1;
}

message ValidateResponse {
    ServiceAccount service_account = 1;
}

message RevokeResponse {}

message AddRoleResponse {}

message RemoveRoleResponse {}